# mcp-wrapper

./: .gitignore  Dockerfile  LLM_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.sh
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
config/: agents.toml  agents.toml.example  gateway.toml.example  mcp-servers.toml.example  native-tools.toml  native-tools.toml.example  plugins.toml  plugins.toml.example  rules-agents.toml.example  rules-defaults.toml.example  rules-defaults.toml.extended.example  rules.toml  rules.toml.example  wrapper.toml  wrapper.toml.example
documents/: use-case-and-positioning.md
plan/: mcp-security-wrapper-plan.md
plugins/: csv_query.py  fetch_body.py  html_to_markdown.py  jq_query.py  list_files.py  math_eval.py  pdf_to_text.py  read_file.py  shell.py  upload_file.py  write_file.py  xlsx_to_csv.py
src/mcp_wrapper/: __init__.py  admin.py  admin_auth.py  anomaly.py  approvals.py  config.py  config_writer.py  credentials.py  dlp.py  gateway.py  identity.py  limiter.py  logger.py  main.py  mcp_client.py  mcp_server.py  models.py  native_tools.py  notifications.py  plugin_tools.py  proxy.py  response.py  rules.py  server.py  workflow.py
src/mcp_wrapper/static/admin/: admin.css  admin.js
src/mcp_wrapper/templates/admin/: agent_edit.html  agents.html  audit.html  base.html  dashboard.html  dlp.html  dlp_pattern.html  entity_access.html  explore.html  gateway_credentials.html  gateway_list.html  login.html  oauth_result.html  plugin_credentials.html  plugin_list.html  rules.html  server_edit.html  servers.html  settings.html  setup.html  tool_constraint_editor.html  (+2 more)
tests/: test_agent_harness.py  test_anomaly.py  test_approvals.py  test_credentials.py  test_dlp.py  test_identity.py  test_logger.py  test_multiagent.py  test_notifications.py  test_proxy.py  test_rules.py  test_server.py  test_workflow_transforms.py
(+5 files in other folders)
