[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-wrapper"
version = "0.1.0"
description = "Security and monitoring wrapper for MCP servers"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "keyring>=25.0.0",
    "limits>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "hvac>=2.0.0",
]

[project.optional-dependencies]
vault-aws = [
    "boto3>=1.34.0",
]
vault-gcp = [
    "google-auth>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
]

[project.scripts]
mcp-wrapper = "mcp_wrapper.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_wrapper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
